# xlog

./: README.md  main.py  pyproject.toml
src/xlog/: __main__.py  auth.py  config.py  core.py  utils.py
